# django-sspanel

./: .env.sample  .env_mysql.example  .flake8  .gitattributes  .gitignore  Dockerfile  Dockerfile-BASE  Dockerfile-CODE  Dockerfile-NGINX  Dockerfile-UPDATE  Dockerfile.NGINX  Dockerfile.RUNTIME  Makefile  Pipfile  README.md  config.yaml  docker-compose.yml  go.mod  localserver.sh  manage.py  nginx.conf  nginx.example.conf  nginx_vhost.conf  nginx_vhost_https.conf  pyproject.toml  requirements.txt  ubuntu_install.md  uwsgi.ini  wait-for-it.sh
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug----.md  feature-request.md
.github/workflows/: cd.yml  check.yml  ci.yml  code.yml  debug.yml  docker-build-code.yml  docker-build-nginx.yml  docker-build-runtime.yml  docker-push.yml  issue.yaml  lint.yml  runtime.yml  ssr.yaml  tag.yml
api/: loadtest.py  tests.py  urls.py  views.py
apps/: __init__.py  cache_keys.py  cachext.py  celery.py  connector.py  constants.py  custom_views.py  encoder.py  ext.py  mixin.py  mw.py  payments.py  sub.py  tianyi.py  urls.py  utils.py  wsgi.py
apps/api/: loadtest.py  tests.py  urls.py  views.py
apps/extensions/: alipay.py  cachext.py  encoder.py  lock.py
apps/openapi/: admin.py  apps.py  models.py  serializer.py  urls.py  utils.py  views.py
apps/proxy/: __init__.py  admin.py  apps.py  models.py
apps/shadowsocks/: urls.py  views.py
apps/sspanel/: __init__.py  admin.py  admin_views.py  apps.py  backends.py  forms.py  models.py  tasks.py  tools.py  urls.py  views.py
apps/ssserver/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/stats/: __init__.py  admin.py  apps.py  models.py  tasks.py
apps/tgbot/: main.py  utils.py
commands/: __init__.py  add_invidecode_num.py  clear_zombie_user.py  croncmds.py  export_node_host.py  gen_user_vmess_uuid.py  migrate_ss_node.py  migrate_ss_users.py  print_user_count.py  redeem.py
configs/: __init__.py  development.py  production.py
configs/default/: __init__.py  celery.py  common.py  cron.py  cronjob.py  db.py  email.py  pay.py  redis.py  sentry.py  site.py  sites.py  tgbot.py
configs/mysqld/: mysqld_charset.cnf
configs/nginx/: nginx.example.conf
content/docs/: backend.md  panel.md
db_tools/: trans_user_data.py
deploy/: Dockerfile.CODE  Dockerfile.DEBUG-CODE  Dockerfile.DEBUG-RUNTIME  Dockerfile.RUNTIME
django-sspanel/: settings.py  simple_setting_local.py  simple_setting_product.py  urls.py  wsgi.py
django_sspanel/: settings.py  simple_setting_local.py  simple_setting_product.py  wsgi.py
docs/: 404.html  index.html  index.xml  robots.txt  sitemap.xml
docs/categories/: index.html  index.xml
docs/docs/: index.html  index.xml
docs/tags/: index.html  index.xml
openapi/: spec.yaml
scripts/: readme.md  ss_OneKey.sh  v2ray+ws+tls_onekey.sh  v2ray_onekey.sh
scripts/v2ray/: sspanel_V2ray.service  sspanel_Vray.timer  v2ray-config.json  v2ray.sh  (+1 more)
shadowsocks/: admin.py  apps.py  backends.py  forms.py  models.py  payments.py  tools.py  urls.py  views.py
spec/: openapi.yaml
ssserver/: admin.py  cron.py  forms.py  models.py  tests.py  urls.py  views.py
templates/: 404.html  adminbase.html  backendbase.html  base.html  basehead.html  footer.html
v2/: __init__.py  apps.py
(+346 files in other folders)
