[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.poetry]
name = "django-sspanel"
version = "0.1.0"
description = ""
authors = ["Ehco1996 <zh19960202@gmail.com>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
django-anymail = "^8.2"
django-countries = "^7.1"
django-prometheus = "^2.1.0"
django-simpleui = "^2021.4.3"
Markdown = "^3.3.4"
mysqlclient = "^2.0.3"
python-alipay-sdk = "^3.0.1"
sentry-sdk = "^1.0.0"
short_url = "^1.2.2"
tomd = "^0.1.3"
uWSGI = "^2.0.19"
pendulum = "^2.1.2"
redis = "^3.5.3"
celery = "^5.0.5"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
django-debug-toolbar = "^3.2.1"
isort = "^5.8.0"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
