[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.poetry]
name = "django-sspanel"
version = "0.1.0"
description = ""
authors = ["Ehco1996 <zh19960202@gmail.com>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1"
django-anymail = "^8.2"
django-countries = "^7.1"
django-prometheus = "^2.1.0"
django-simpleui = "^2022.12"
Markdown = "^3.3.4"
python-alipay-sdk = "^3.0.1"
sentry-sdk = "^1.10.1"
short_url = "^1.2.2"
tomd = "^0.1.3"
uWSGI = "^2.0.19"
pendulum = "^2.1.2"
redis = "^3.5.3"
celery = "^5.1.2"
ipicn = "^2021.5.5"
PyMySQL = "^1.0.2"
ipython = "^8.5.0"
python-slugify = "^7.0.0"
django-telegram-login = "^0.2.3"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
django-debug-toolbar = "^3.7.0"
isort = "^5.10.1"
autoflake = "^1.7.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
