[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.poetry]
authors = ["Ehco1996 <zh19960202@gmail.com>"]
description = "django sspanel"
license = "GPL-3.0 License"
name = "django-sspanel"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^4.2.6"
Markdown = "^3.3.4"
PyMySQL = "^1.1.0"
celery = "^5.3.4"
django-anymail = "^8.2"
django-cors-headers = "^4.2.0"
django-countries = "^7.1"
django-debug-toolbar = "^4.2.0"
django-prometheus = "^2.1.0"
django-simpleui = "^2023.8.28"
django-telegram-login = "^0.2.3"
ipicn = "^2021.5.5"
ipython = "^8.16.1"
pendulum = "^2.1.2"
python = "^3.11"
python-alipay-sdk = "^3.0.1"
python-slugify = "^6.1.2"
redis = "^3.5.3"
sentry-sdk = "^1.10.1"
short_url = "^1.2.2"
tomd = "^0.1.3"
uWSGI = "^2.0.22"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2.1"
black = "^23.10.1"
isort = "^5.12.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
